--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jagokode/restapi2#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "joi": "^14.3.1"
+    "joi": "^14.3.1",
+    "mongoose": "^5.5.3"
   }
 }
